# server

./: CMakeLists.txt
.github/workflows/: build.yml
changelogs/: changelog-2024-09-01.md  changelog-2024-09-15.md  changelog-2024-10-01.md  changelog-2024-10-15.md
ext/: CMakeLists.txt
scripts/zones/Tavnazian_Safehold/npcs/: Despachiaire.lua
sql/: mob_skill_lists.sql  mob_skills.sql
src/common/: CMakeLists.txt  debug_windows.cpp  utils.cpp
src/login/: login.cpp
src/map/: CMakeLists.txt  Makefile.in  ability.cpp  conquest_system.cpp  instance_loader.cpp  map.cpp  map.h  packet_system.cpp  spell.cpp  status_effect_container.cpp  zone_entities.cpp
src/map/ai/controllers/: automaton_controller.cpp
src/map/ai/helpers/: gambits_container.cpp
src/map/entities/: charentity.cpp  charentity.h  trustentity.cpp
src/map/lua/: lua_baseentity.cpp  lua_baseentity.h  luautils.cpp
src/map/packets/: conquest_map.cpp  entity_update.cpp  merit_points_categories.cpp  merit_points_categories.h  quest_mission_log.cpp  quest_mission_log.h
src/map/utils/: battleutils.cpp  charutils.cpp  fishingutils.cpp  mobutils.cpp  trustutils.cpp  zoneutils.cpp
src/search/: search.cpp
tools/: dbtool.py
tools/headlessxi/: hxiclient.py  util.py
